# MCP-Factory

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.cursor/rules/: architecture.mdc  extending-services.mdc  mcp-factory-tools.mdc  no-ai-branding-commits.mdc
docs/: ADDING-A-SERVICE.md  ADDING-TOOLS.md  ARCHITECTURE.md  DEVELOPMENT-WORKFLOW.md  FORKING-GUIDE.md  LETS-BUILD-AN-MCP-SERVER.md  index.html
mcp_factory/: __init__.py  config.py  server.py
mcp_factory/services/: base.py  registry.py
mcp_factory/services/apod/: __init__.py  client.py  config.py  formatter.py  validation.py
mcp_factory/services/code_guardian/: __init__.py  config.py  formatter.py  models.py  osv_client.py  scanner.py
nasa_apod/: __init__.py  config.py  server.py
nasa_apod/services/: __init__.py  base.py  registry.py
scripts/: commit-msg
templates/: README.md
templates/service_template/: __init__.py  client.py  config.py  formatter.py  validation.py
tests/: test_apod_client.py  test_apod_config.py  test_apod_formatter.py  test_apod_validation.py  test_base.py  test_code_guardian_analyzer_registry.py  test_code_guardian_debug_analyzer.py  test_code_guardian_dependency_analyzer.py  test_code_guardian_e2e.py  test_code_guardian_formatter.py  test_code_guardian_models.py  test_code_guardian_osv_client.py  test_code_guardian_quality_analyzer.py  test_code_guardian_scanner.py  test_code_guardian_secret_analyzer.py  test_code_guardian_security_pattern_analyzer.py  test_code_guardian_style_analyzer.py  test_code_guardian_validation.py  test_e2e.py  test_registry.py
(+25 files in other folders)
